fixing manual for visibility

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -241,7 +241,7 @@ html, body {
   padding-top: 48px;
 }
 .mdl-demo .mdl-card {
-  height: auto;
+  height: 700px;
   display: flex;
   flex-direction: column;
 }
